[package]
name = "reeser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.12"
hound = "3.4"
ringbuf = "0.2"
clap = { version = "3.1", default-features = false, features = ["std"] }
cpal = "0.13.5"
glow = "0.11.0"
glutin = "0.28"
winit = "0.26.1"

png = "0.17.1"
#palette = "0.3.0"
assert_hex = "0.2.2"

rustfft = "6.0.1"
plotlib = "0.5.1"